--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:context=".MainActivity"
+    android:background="@drawable/welcome_bg">
+
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="222dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="200dp"
+        android:contentDescription="@string/app_name"
+        app:srcCompat="@drawable/vertical_logo" />
+
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Welcome to LuxeVista Resort"
+        android:textColor="@color/white"
+        android:fontFamily="@font/custom_font_inter"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:letterSpacing="0.05"
+        android:layout_marginTop="30dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:text="Your Luxury Escape Awaits – Book, Relax, and Explore in Paradise!"
+        android:textAlignment="center"
+        android:fontFamily="@font/custom_font_inter"
+        android:textColor="@color/white"
+        android:letterSpacing="0.05"
+        android:layout_margin="20dp"
+        android:textSize="16sp"
+        android:layout_marginTop="20dp" />
+
+
+    <Button
+        android:id="@+id/button2"
+        style="@style/RoundedButton"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="Get Started Now!"
+        android:textColor="@color/jungleGreen"
+        android:textStyle="bold"
+        app:backgroundTint="@color/white"
+        android:onClick="registerPage" />
+
+</LinearLayout>
