--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="jungleGreen">#027A5E</color>
+    <color name="customGrey">#F0F0F0</color>
+    <color name="darkGrey">#CCCBCB</color>
 </resources>
