--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -9,4 +9,11 @@
         <item name="android:letterSpacing">0.05</item>
         <item name="android:fontFamily">@font/custom_font_inter</item>
     </style>
+    <style name="BottomCornerRound" parent="">
+        <item name="cornerFamilyBottomLeft">rounded</item>
+        <item name="cornerFamilyBottomRight">rounded</item>
+        <item name="cornerSizeBottomLeft">20%</item>
+        <item name="cornerSizeBottomRight">20%</item>
+
+    </style>
 </resources>
