--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -15,15 +15,14 @@
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/rounded_button">
+        android:layout_marginTop="10dp">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/bannerImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/rounded_corners"
             android:scaleType="centerCrop"
+            app:shapeAppearance="@style/CornerRound"
             app:srcCompat="@drawable/home_banner" />
 
         <TextView
@@ -47,12 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/custom_font_inter"
-        android:letterSpacing="0.03"
-        android:text="Room Type"
+        android:layout_marginTop="20dp"
+        android:text="Room Types"
         android:textColor="@color/jungleGreen"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -60,6 +57,93 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scrollbars="none" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="Local Attractions"
+        android:textColor="@color/jungleGreen"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/locationRecyclerView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="none" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        >
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/promotionsImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:scaleType="centerCrop"
+            app:shapeAppearance="@style/CornerRound"
+            app:srcCompat="@drawable/promotion_banner" />
+
+        <TextView
+            android:id="@+id/promotionsText"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/promotionsImage"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="116dp"
+            android:layout_marginBottom="148dp"
+            android:fontFamily="@font/custom_font_inter"
+            android:letterSpacing="0.07"
+            android:text="Exclusive LuxeVista Deals"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/promotionsText2"
+            android:layout_width="217dp"
+            android:layout_height="31dp"
+            android:layout_alignBottom="@id/promotionsImage"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="150dp"
+            android:layout_marginBottom="109dp"
+            android:fontFamily="@font/custom_font_inter"
+            android:letterSpacing="0.08"
+            android:text="Stay longer, save more! Enjoy personalized packages tailored to your dream vacation."
+            android:textColor="@android:color/white"
+            android:textSize="8sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/servicesButton"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginBottom="71dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_green_button"
+            android:text="Explore Now!"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:backgroundTint="@color/jungleGreen" />
+
+    </RelativeLayout>
 </LinearLayout>
 
 </FrameLayout>
