--- a/app/src/main/res/layout/service_card.xml
+++ b/app/src/main/res/layout/service_card.xml
@@ -1,7 +1,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
-    android:layout_height="150dp"
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
     android:layout_margin="10dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp">
@@ -11,23 +11,24 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/locationImage"
+            android:id="@+id/serviceImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/home_banner" />
 
         <TextView
-            android:id="@+id/locationName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/serviceName"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
             android:layout_centerInParent="true"
             android:layout_alignParentBottom="true"
-            android:layout_margin="10dp"
+            android:textAlignment="center"
+            android:background="@color/darkGreen"
             android:padding="5dp"
-            android:text="Location 1"
+            android:text="service 1"
             android:textColor="@android:color/white"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
