--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="jungleGreen">#027A5E</color>
+    <color name="darkGreen">#10332B</color>
     <color name="customGrey">#F0F0F0</color>
     <color name="darkGrey">#CCCBCB</color>
+    <color name="lightGrey">#66D9D9D9</color>
 </resources>
