--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,38 +20,15 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             app:shapeAppearance="@style/BottomCornerRound"
-            android:src="@drawable/home_bg" />
+            android:src="@drawable/home_bg"
+            />
 
-
-
-        <ImageView
-            android:id="@+id/icon1"
-            android:layout_width="35dp"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="20dp"
-            app:srcCompat="@drawable/back_icon" />
-
-        <ImageView
-            android:id="@+id/icon2"
-            android:layout_width="30dp"
-            android:layout_height="40dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="20dp"
-            app:srcCompat="@drawable/menu_icon" />
 
         <ImageView
             android:id="@+id/icon3"
-            android:layout_width="180dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-
-            android:layout_marginEnd="112dp"
+            android:layout_centerInParent="true"
             android:layout_marginBottom="5dp"
             app:srcCompat="@drawable/horizontal_logo" />
 
@@ -59,6 +36,7 @@
 
 
     <LinearLayout
+        android:id="@+id/homeNavButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -114,7 +92,7 @@
     </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationId"
+        android:id="@+id/bottomNavigationMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/jungleGreen"
