--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -66,9 +66,77 @@
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/locationButton"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:letterSpacing="0.08"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_green_button"
+                android:text="Location"
+                android:drawableLeft="@drawable/location"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:backgroundTint="@color/jungleGreen" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Reservation &amp;  Contact"
+                android:letterSpacing="0.07"
+                android:textColor="@color/jungleGreen"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/mobileButton"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:letterSpacing="0.08"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_green_button"
+                android:text="+90  549  781  99  51"
+                android:drawableLeft="@drawable/phone"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:backgroundTint="@color/darkGreen" />
 
+            <Button
+                android:id="@+id/whatsappButton"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:letterSpacing="0.08"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_green_button"
+                android:text="info@luxevista.com"
+                android:drawableLeft="@drawable/email"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:backgroundTint="@color/darkGreen" />
         </LinearLayout>
     </LinearLayout>
 
