--- a/app/src/main/res/layout/location_card.xml
+++ b/app/src/main/res/layout/location_card.xml
@@ -19,15 +19,19 @@
 
         <TextView
             android:id="@+id/locationName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:layout_centerInParent="true"
             android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
-            android:padding="5dp"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="10dp"
             android:text="Location 1"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
+            android:textColor="@color/jungleGreen"
+            android:background="@drawable/rounded_button"
+            app:backgroundTint="@color/whiteOpacity"
+            android:textSize="12sp"
             android:textStyle="bold" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
