--- a/app/src/main/res/layout/room_card_sq.xml
+++ b/app/src/main/res/layout/room_card_sq.xml
@@ -1,14 +1,18 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
+    android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:layout_margin="10dp"
+    android:layout_centerInParent="true"
+    android:layout_gravity="center"
     app:cardCornerRadius="10dp"
+    android:layout_margin="10dp"
     app:cardElevation="5dp">
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
         <ImageView
             android:id="@+id/roomImage"
@@ -20,18 +24,16 @@
         <TextView
             android:id="@+id/roomName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
+            android:layout_height="40dp"
             android:layout_centerInParent="true"
             android:layout_alignParentBottom="true"
-            android:layout_margin="10dp"
             android:paddingVertical="5dp"
             android:paddingHorizontal="10dp"
             android:text="Room 1"
-            android:textColor="@color/jungleGreen"
-            android:background="@drawable/rounded_button"
-            app:backgroundTint="@color/whiteOpacity"
-            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:background="@color/darkGreen"
+            android:textSize="14sp"
             android:textStyle="bold" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
