--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="whiteOpacity">#D9FFFFFF</color>
     <color name="jungleGreen">#027A5E</color>
     <color name="darkGreen">#10332B</color>
     <color name="customGrey">#F0F0F0</color>
