--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,16 +20,16 @@
         android:text="Create Your LuxeVista Account"
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/subtitle"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/custom_font_inter"
         android:letterSpacing="0.05"
         android:text="Unlock exclusive benefits and personalize your luxury experience."
@@ -55,15 +55,21 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:background="@drawable/input_field">
+           >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/nameInput"
+                android:id="@+id/register_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textColor="@color/darkGreen"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/custom_font_inter"
+                android:background="@drawable/input_field"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -79,15 +85,21 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:background="@drawable/input_field">
+           >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/emailInput"
+                android:id="@+id/register_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColor="@color/darkGreen"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                android:background="@drawable/input_field"
+                android:fontFamily="@font/custom_font_inter"/>
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -103,15 +115,21 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:background="@drawable/input_field">
+            >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/mobileInput"
+                android:id="@+id/register_mobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="phone" />
+                android:inputType="phone"
+                android:textColor="@color/darkGreen"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                android:background="@drawable/input_field"
+                android:fontFamily="@font/custom_font_inter"/>
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -127,40 +145,24 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="4dp"
-            android:background="@drawable/input_field">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/passwordInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/custom_font_inter"
-            android:letterSpacing="0.05"
-            android:text="Confirm Password"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
             android:layout_marginTop="4dp"
-            android:background="@drawable/input_field">
+            >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/confirmPasswordInput"
+                android:id="@+id/register_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textColor="@color/darkGreen"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                android:background="@drawable/input_field"
+                android:fontFamily="@font/custom_font_inter"/>
+
         </com.google.android.material.textfield.TextInputLayout>
+
+
 
     </LinearLayout>
 
@@ -178,8 +180,9 @@
         android:layout_height="wrap_content"
         android:buttonTint="@color/white"
         android:fontFamily="@font/custom_font_inter"
+
         android:letterSpacing="0.05"
-        android:textSize="15dp"
+        android:textSize="12dp"
         android:text="I  read and agree to Terms and Conditions"
         android:textColor="@color/white" />
 
@@ -187,11 +190,11 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/register_button"
         style="@style/RoundedButton"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:text="Sign Up"
         android:textSize="18sp"
         android:textColor="@color/white"
@@ -270,7 +273,7 @@
         >
 
         <TextView
-            android:id="@+id/donthaveacctextView"
+            android:id="@+id/login_redirect_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/custom_font_inter"
@@ -284,7 +287,7 @@
             />
 
         <TextView
-            android:id="@+id/signuptextView"
+            android:id="@+id/login_redirect_text_link"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
