--- a/app/src/main/res/layout/service_details_card.xml
+++ b/app/src/main/res/layout/service_details_card.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
+    android:layout_margin="15dp"
     app:cardCornerRadius="20dp"
     app:cardElevation="6dp">
 
@@ -11,12 +11,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
 
-        android:background="@color/darkGreen"
-
+        android:background="@color/darkGrey"
         >
 
         <ImageView
-            android:id="@+id/serviceImage"
+            android:id="@+id/subServiceImage"
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:scaleType="centerCrop"
@@ -34,13 +33,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="260dp"
-                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                android:background="@color/lightGrey"
                 android:gravity="center"
-                android:background="@color/lightGrey">
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/serviceName"
+                    android:id="@+id/subServiceName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
@@ -50,55 +49,49 @@
                     android:padding="10dp"
                     android:text="Swadeshi Massage"
                     android:textColor="@color/darkGreen"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/serviceName2"
+                    android:id="@+id/subServiceDescription"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:layout_marginBottom="5dp"
-                    android:textAlignment="center"
-                    android:letterSpacing="0.09"
-                    android:text="A relaxing full-body massage using long strokes and kneading to relieve tension and improve circulation."
-                    android:layout_centerInParent="true"
                     android:layout_alignParentTop="true"
-                    android:textSize="14sp"
+                    android:layout_centerInParent="true"
+                    android:letterSpacing="0.09"
+                    android:padding="10dp"
+                    android:text="A relaxing full-body massage using long strokes and kneading to relieve tension and improve circulation."
+                    android:textAlignment="center"
                     android:textColor="@color/darkGreen"
-                    />
+                    android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/serviceName3"
+                    android:id="@+id/subServicePrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:textAlignment="center"
-                    android:layout_marginBottom="5dp"
                     android:letterSpacing="0.09"
+                    android:padding="10dp"
                     android:text="Price: $50/1 hr"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentTop="true"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
+                    android:textAlignment="center"
                     android:textColor="@color/darkGreen"
-                    />
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
 
                 <Button
-                    android:id="@+id/locationButton"
+                    android:id="@+id/subServiceBookButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
                     android:layout_marginHorizontal="50dp"
-                    android:layout_marginTop="10dp"
-                    android:letterSpacing="0.1"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
                     android:layout_weight="1"
                     android:background="@drawable/rounded_green_button"
+                    android:letterSpacing="0.1"
                     android:text="Book Now"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
-                    app:backgroundTint="@color/jungleGreen" />
+                    app:backgroundTint="@color/darkGreen" />
 
             </LinearLayout>
 
