--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="@color/lightGrey"
+android:background="@drawable/booking_bg"
 android:gravity="top"
 android:orientation="vertical">
 
@@ -26,12 +26,12 @@ android:orientation="vertical">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profile"
-        android:textSize="20dp"
+        android:textSize="16dp"
         android:fontFamily="@font/custom_font_inter"
         android:textStyle="bold"
         android:letterSpacing="0.09"
         android:layout_centerInParent="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:layout_alignParentTop="true"
         android:textColor="@color/whiteOpacity"/>
 
@@ -55,19 +55,45 @@ android:orientation="vertical">
         android:layout_marginTop="-100dp">
 
         <ImageView
+            android:id="@+id/profileImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/home_banner"
             android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center"/>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="20dp"
+        android:backgroundTint="@color/whiteOpacity"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="6dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="20dp"
         android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/custom_font_inter"
+            android:letterSpacing="0.05"
+            android:text="Profile Management"
+            android:layout_gravity="center"
+            android:paddingBottom="20dp"
+            android:textColor="@color/darkGreen"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -85,7 +111,7 @@ android:orientation="vertical">
             android:layout_marginTop="4dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/register_name"
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_field"
@@ -113,7 +139,7 @@ android:orientation="vertical">
             android:layout_marginTop="4dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/register_email"
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_field"
@@ -142,7 +168,7 @@ android:orientation="vertical">
             android:layout_marginTop="4dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/register_mobile"
+                android:id="@+id/mobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_field"
@@ -171,12 +197,11 @@ android:orientation="vertical">
             android:layout_marginTop="4dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/register_password"
+                android:id="@+id/address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_field"
                 android:fontFamily="@font/custom_font_inter"
-                android:inputType="textPassword"
                 android:textColor="@color/darkGreen"
                 android:textSize="14dp"
                 android:textStyle="bold" />
@@ -186,41 +211,44 @@ android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginVertical="20dp"
             android:gravity="center"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/saveChangesButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="30dp"
-                android:backgroundTint="@color/darkGreen"
-                android:fontFamily="@font/custom_font_inter"
-                android:background="@drawable/rounded_button"
-                android:text="Save Changes"
+                android:id="@+id/cancelButton"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:letterSpacing="0.08"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_green_button"
+                android:text="Cancel"
                 android:textColor="@color/white"
-                android:textStyle="bold" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:backgroundTint="@color/darkGreen" />
 
             <Button
-                android:id="@+id/cancelButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:text="Cancel"
-                android:textColor="@color/darkGreen"
-                android:fontFamily="@font/custom_font_inter"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="30dp"
+                android:id="@+id/saveButton"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:letterSpacing="0.08"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_green_button"
+                android:text="Save Changes"
+                android:textColor="@color/white"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:background="@drawable/rounded_button"
-
-                />
+                app:backgroundTint="@color/darkGreen" />
 
         </LinearLayout>
 
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
