--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -15,15 +15,31 @@
         android:layout_width="match_parent"
         android:layout_height="200dp">
 
+
+
+
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/roomImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="-1dp"
+            android:layout_marginBottom="0dp"
             android:scaleType="centerCrop"
-            app:shapeAppearance="@style/BottomCornerRound"
             android:src="@drawable/home_bg"
-            />
+            app:shapeAppearance="@style/BottomCornerRound" />
 
+        <ImageView
+            android:id="@+id/backIcon"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="?android:attr/actionBarSize"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/back_icon"
+            />
 
     </RelativeLayout>
 
